Improve header style

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
 
 	<div id="header">
-		<span id="chat_with"></span>
+        <img id=userIcon src="assets/images/whatsapp.svg" />
+		<span id="chat_with">WhatsApp Chat Viewer</span>
 		<input id="getFile" type="file">
 		<div id="app_btns">
 			<img id="trash" src="assets/images/trash.svg">
